[package]
name = "kk99-matching-engine"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.10"
prost = "0.12"
tokio-stream = { version = "0.1", features = ["sync"] }
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
rust_decimal = "1.33"
chrono = "0.4"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
lmax-disruptor = "0.3"
kafka = "0.9"
avro-rs = "0.13"

[build-dependencies]
tonic-build = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
codegen-units = 1
strip = true
